Move jupyter script to Pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -15,3 +15,6 @@ jupyter = "*"
 
 [requires]
 python_version = "3"
+
+[scripts]
+"jupyter.sock" = "bash -c 'socat UNIX-LISTEN:jupyter.sock,fork,reuseaddr TCP4:127.0.0.1:8888 & pipenv run jupyter notebook --ip=127.0.0.1 --port=8888'"
